# wiki-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  test_config.yaml
.github/: CICD.md
.github/workflows/: build-and-release.yml
.trae/rules/: project_rules.md
api-doc-generator/: SKILL.md
api-doc-generator/references/: api-doc-best-practices.md  backend-frameworks.md  doc-structure.md  framework-patterns.md  frontend-frameworks.md
api-doc-generator/scripts/: api_scanner.py  doc_generator.py  module_classifier.py
architecture-doc-generator/: SKILL.md
architecture-doc-generator/references/: desktop-platform.md  game-platform.md  mobile-platform.md  sad-template.md  tdd-template.md  web-platform.md
design-pattern-advisor/: SKILL.md  WORKFLOW.md
design-pattern-advisor/references/: README.md
doc-orchestrator/: SKILL.md
doc-orchestrator/references/: diagram-strategy.md  doc-types-catalog.md  dual-track-protocol.md  quality-metrics.md  solid-doc-principles.md  template-variable-system.md
doc-orchestrator/scripts/: export.py  transform.py  validate.py
interface-data-doc-generator/: SKILL.md
interface-data-doc-generator/references/: api-doc-template.md  db-doc-template.md  openapi-cheatsheet.md  protobuf-guide.md  (+2 more)
project-wiki/: PROJECT_SUMMARY.md  QUICKSTART.md  SKILL.md  SKILL_OPTIMIZATION_SUMMARY.md  TEMPLATE_GENERATOR.md  WORKFLOW.md  variable_report.md
quality-ops-doc-gen/: SKILL.md
requirements-doc-gen/: SKILL.md
scripts/: build_skills.py  bump_version.py  detect_skill_changes.py  generate_release_notes.py
(+142 files in other folders)
